# reversiServer

./: CMakeLists.txt  CloseGame.h  Command.h  CommandsManager.cpp  CommandsManager.h  CreateGame.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  JoinGame.cpp  JoinGame.h  ListGames.cpp  ListGames.h  PlayGame.cpp  PlayGame.h  PlayMove.h  Server.cpp  Server.h  StartGame.cpp  StartGame.h  Task.h  ThreadPool.cpp  ThreadPool.h  WhichCommend.h  main.cpp
